--- a/public/index.html
+++ b/public/index.html
@@ -57,42 +57,193 @@
   </section>
 
 
-  <section class="speakers constrained" id="speakers">
+  <section class="constrained" id="speakers">
     <h1 class="heading"><span>Speakers</span></h1>
-    <div class="speaker keynote josevalim">
-      <div class="keynote-info">
-        <figure>
+    <div class="speakers">
+      <div class="speaker keynote">
+        <div class="ribbon-wrapper"><div class="ribbon">KEYNOTE</div></div>
+        <div class="speaker-image">
           <img src="/images/speakers/keynote-josevalim.png" alt="José Valim">
-          <figcaption><a href="http://www.erlang-factory.com/upload/peopleimage/Krakow2011_JoseValim/Euruko.jpg">source</a></figcaption>
-        </figure>
-        <div class="keynote-meta">
-          <h4>Keynote Speaker</h4>
-          <h1>José Valim</h1>
         </div>
-      </div>
-      <div class="keynote-bio">
-        <p>José Valim is a developer and the creator of the <a href="http://elixir-lang.org/">Elixir language</a>.
-        <br><br>
-        When not building Elixir, José is also a Rails Core Team member and the founder of the development group <a href="http://plataformatec.com.br/">Plataformatec</a>.</p>
-      </div>
+        <div class="speaker-header">
+          José Valim (<a href="http://twitter.com/josevalim">@josevalim</a>)
+        </div>
+        <div class="speaker-copy">
+          <p>José Valim is an author, developer, and the creator of the <a href="http://elixir-lang.org/">Elixir language</a>. When not building Elixir, José is also a Rails Core Team member and the founder of the development group <a href="http://plataformatec.com.br/">Plataformatec</a>.</p>
+        </div>
+      </div> <!-- .speaker.keynote -->
+
+      <div class="speaker keynote">
+        <div class="ribbon-wrapper"><div class="ribbon">KEYNOTE</div></div>
+        <div class="speaker-image">
+          <img src="/images/speakers/keynote-davethomas.png" alt="Dave Thomas">
+        </div>
+        <div class="speaker-header">
+          Dave Thomas (<a href="http://twitter.com/pragdave">@pragdave</a>)
+        </div>
+        <div class="speaker-copy">
+          <p>Dave Thomas is a programmer, <a href="http://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">author</a>, and <a href="http://pragprog.com/">publisher</a>. Currently, Dave is writing <a href="http://pragprog.com/book/elixir/programming-elixir">Programming Elixir</a> in the hopes that he can help foster growth in the Elixir community.</p>
+        </div>
+      </div> <!-- .speaker.keynote -->
     </div>
 
-    <div class="speaker keynote davethomas">
-      <div class="keynote-info">
-        <figure>
-          <img src="/images/speakers/keynote-davethomas.png" alt="Dave Thomas">
-          <figcaption><a href="http://en.wikipedia.org/wiki/Dave_Thomas_(programmer)#mediaviewer/File:Dave_Thomas_speaking_at_the_Pasadena_Rails_Studio.jpg">source</a></figcaption>
-        </figure>
-        <div class="keynote-meta">
-          <h4>Keynote Speaker</h4>
-          <h1>Dave Thomas</h1>
+    <div class="speakers">
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/brucetate.jpg" alt="">
         </div>
-      </div>
-      <div class="keynote-bio">
-        <p>Dave Thomas is a programmer, author, and <a href="http://pragprog.com/">publisher</a>. He is the author of the <a href="http://pragprog.com/book/ruby4/programming-ruby-1-9-2-0">Programming Ruby</a> series- first published in 2000- helping to inspire many programmers and grow the Ruby community.
-        <br><br>
-        Currently, Dave is writing <a href="http://pragprog.com/book/elixir/programming-elixir">Programming Elixir</a> in the hopes that he can help foster the same growth in the Elixir community.</p>
-      </div>
+        <div class="speaker-header">
+          Bruce Tate
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/chrismccord.png" alt="">
+        </div>
+        <div class="speaker-header">
+          Chris McCord
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/devintorres.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Devin Torres
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/ericmeadowsjonsson.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Eric Meadows-J&ouml;nsson
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/filipevarjao.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Filipe Varj&atilde;o
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/francescocesarini.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Francesco Cesarini
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/gregvaughn.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Greg Vaughn
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/jamessmith.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          James Smith
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/joshadams.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Josh Adams
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/martinschurrer.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Martin Schurrer
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/richardbishop.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Richard Bishop
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/robertvirding.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Robert Virding
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
+      <div class="speaker">
+        <div class="speaker-image">
+          <img src="/images/speakers/stephenpallen.jpg" alt="">
+        </div>
+        <div class="speaker-header">
+          Stephen Pallen
+        </div>
+        <div class="speaker-copy">
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, officiis sunt neque facilis culpa molestiae necessitatibus delectus veniam provident.</p>
+        </div>
+      </div> <!-- .speaker -->
+
     </div>
   </section>
 
