--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
 
   <header class="navigation">
     <div class="menu-wrapper">
-      <a href="javascript:void(0)" class="logo">
+      <a href="/" class="logo">
         <img src="images/branding/icon-elixirconf-small.png" alt="ElixirConf">
       </a>
       <p class="navigation-menu-button" id="js-mobile-menu">MENU</p>
