Added Twitter URLs for speakers in schedule.

--- a/public/index.html
+++ b/public/index.html
@@ -544,7 +544,7 @@
           <span class="timespan">9:00 - 10:00 AM</span>
           <div class="event-info">
             <h5 class="event-title">Opening Keynote</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Dave Thomas</a></p>
+            <p class="event-speaker"><a href="https://twitter.com/pragdave">Dave Thomas</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -552,7 +552,7 @@
           <span class="timespan">10:00 - 10:45 AM</span>
           <div class="event-info">
             <h5 class="event-title">The First Few Sips</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Richard Bishop</a></p>
+            <p class="event-speaker"><a href="https://twitter.com/rbondev">Richard Bishop</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -567,7 +567,7 @@
           <span class="timespan">11:00 - 11:45 AM</span>
           <div class="event-info">
             <h5 class="event-title">Introduction to Elixir for Rubyists</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Josh Adams</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/knewter">Josh Adams</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -575,7 +575,7 @@
           <span class="timespan">11:45 - 12:30 PM</span>
           <div class="event-info">
             <h5 class="event-title">Hex - How it was built</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Eric Meadows–J&ouml;nsson</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/emjii">Eric Meadows–J&ouml;nsson</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -590,7 +590,7 @@
           <span class="timespan">1:30 - 2:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Writing Command Line Applications with Elixir</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">James Smith</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/st23am">James Smith</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -598,7 +598,7 @@
           <span class="timespan">2:15 - 3:00 PM</span>
           <div class="event-info">
             <h5 class="event-title">Elixir Elevated</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Greg Vaughn</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/gregvaughn">Greg Vaughn</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -613,7 +613,7 @@
           <span class="timespan">3:30 - 4:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Elixir - Evaluating Performance of language</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Filipe Varj&atilde;o</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/filipevarjao">Filipe Varj&atilde;o</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -621,7 +621,7 @@
           <span class="timespan">4:15 - 5:00 PM</span>
           <div class="event-info">
             <h5 class="event-title">Elixir in an Enterprise Telecommunications Product</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Stephen Pallen</a></p>
+            <p class="event-speaker">Stephen Pallen</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -648,7 +648,7 @@
           <span class="timespan">9:00 - 09:45 AM</span>
           <div class="event-info">
             <h5 class="event-title">Erlang Rationale</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Robert Virding</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/rvirding">Robert Virding</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -656,7 +656,7 @@
           <span class="timespan">9:45 - 10:30 AM</span>
           <div class="event-info">
             <h5 class="event-title">Thinking in a Highly Concurrent, Mostly-functional Language</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Francesco Cesarini</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/FrancescoC">Francesco Cesarini</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -671,7 +671,7 @@
           <span class="timespan">10:45 - 11:30 AM</span>
           <div class="event-info">
             <h5 class="event-title">The Excitement of Elixir</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Devin Torres</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/devinus">Devin Torres</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -679,7 +679,7 @@
           <span class="timespan">11:30 - 12:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Pipe Dreams</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Bruce Tate</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/redrapids">Bruce Tate</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -694,7 +694,7 @@
           <span class="timespan">1:15 - 2:00 PM</span>
           <div class="event-info">
             <h5 class="event-title">Otp In Production: The Nitty-Gritty Details Of Game Servers</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Martin Schurrer</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/MSch">Martin Schurrer</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -702,7 +702,7 @@
           <span class="timespan">2:00 - 2:45 PM</span>
           <div class="event-info">
             <h5 class="event-title">Rise of The Phoenix - Building an Elixir Web Framework</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Chris McCord</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/chris_mccord">Chris McCord</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -717,7 +717,7 @@
           <span class="timespan">3:15 - 4:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Speaker Panel</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Jos&eacute; Valim</a>, <a href="http://twitter.com/">Dave Thomas</a>, <a href="http://twitter.com/">Robert Virding</a>, <a href="http://twitter.com/">Francesco Cesarini</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/josevalim">Jos&eacute; Valim</a>, <a href="http://twitter.com/pragdave">Dave Thomas</a>, <a href="http://twitter.com/rvirding">Robert Virding</a>, <a href="http://twitter.com/FrancescoC">Francesco Cesarini</a></p>
           </div>
         </div> <!-- .row.event -->
 
@@ -725,7 +725,7 @@
           <span class="timespan">4:15 - 5:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Closing Keynote</h5>
-            <p class="event-speaker"><a href="http://twitter.com/">Jos&eacute; Valim</a></p>
+            <p class="event-speaker"><a href="http://twitter.com/josevalim">Jos&eacute; Valim</a></p>
           </div>
         </div> <!-- .row.event -->
 
