Updated a link in About section.

--- a/public/index.html
+++ b/public/index.html
@@ -771,7 +771,7 @@
         </aside>
         <div>
           <h4>Hotel to Venue Transportation</h4>
-          <p>The conference hotel (Hyatt Place Austin, Arboretum) provides a shuttle that will run daily to the conference venue (<a href="https://goo.gl/maps/6EZZR">Norris Conference Center</a>).</p>
+          <p>The conference hotel (<a href="https://goo.gl/maps/oDL6U">Hyatt Place Austin, Arboretum</a>) provides a shuttle that will run daily to the conference venue (<a href="https://goo.gl/maps/6EZZR">Norris Conference Center</a>).</p>
         </div>
       </div>
 
