Added sponsor Traitify.

--- a/public/index.html
+++ b/public/index.html
@@ -780,6 +780,8 @@
         <li class="sponsor"><a href="http://confreaks.com/"><img src="images/sponsors/confreaks.png" alt="Confreaks"></a></li>
         <li class="sponsor"><a href="https://www.erlang-solutions.com/"><img src="images/sponsors/erlangsolutions.png" alt="Erlang Solutions"></a></li>
         <li class="sponsor"><a href="http://www.manning.com/"><img src="images/sponsors/manning.png" alt="Manning"></a></li>
+
+        <li class="sponsor"><a href="http://traitify.com/"><img src="images/sponsors/traitify.jpg" alt="Traitify"></a></li>
       </ul>
     </div>
   </section>
