Added information about food and beverages back in, as well as adjusted some padding for some sections.

--- a/public/index.html
+++ b/public/index.html
@@ -556,6 +556,7 @@
           <span class="timespan">8:00 - 8:45 am</span>
           <div class="event-info">
             <h5 class="event-title">Registration &amp; Breakfast</h5>
+            <p class="event-description">Assorted Donuts, Sausage Kolachees, Fresh Juices, Fruit, Yogurts &amp; Granola</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -609,6 +610,7 @@
           <span class="timespan">12:30 - 1:30 PM</span>
           <div class="event-info">
             <h5 class="event-title">Lunch</h5>
+            <p class="event-description">BBQ Chicken &amp; Brisket, Ranch Beans, Cole Slaw &amp; Potato Salad, (Vegetarian &amp; Special Request options available, please inform registrar)</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -632,6 +634,7 @@
           <span class="timespan">3:00 - 3:30 PM</span>
           <div class="event-info">
             <h5 class="event-title">Short Break</h5>
+            <p class="description">Fresh baked Cookies &amp; Fudge Brownies, Chex Mix and Trail Mixes</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -667,6 +670,7 @@
           <span class="timespan">8:00 - 9:00 AM</span>
           <div class="event-info">
             <h5 class="event-title">Registration &amp; Breakfast</h5>
+            <p class="description">Assorted Donuts, Breakfast Tacos, Fresh Baked Scones, Fresh Juices, Fruit, Yogurts &amp; Granola</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -713,6 +717,7 @@
           <span class="timespan">12:15 - 01:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Lunch</h5>
+            <p class="description">Chicken Fried Chicken &amp; Country Gravy, Mashed Potatoes, Green Beans, (Vegetarian &amp; Special Request options available, please inform registrar)</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -736,6 +741,7 @@
           <span class="timespan">2:45 - 3:15 PM</span>
           <div class="event-info">
             <h5 class="event-title">Short Break</h5>
+            <p class="description">Chocolate Cake &amp; Ice Cold Milk, Chips and Salsa</p>
           </div>
         </div> <!-- .row.event -->
 
@@ -755,7 +761,9 @@
           </div>
         </div> <!-- .row.event -->
 
-      </div>
+      </div> <!-- .this-is-not-a-table -->
+
+      <p>Commons, served all day: Fresh Brewed Coffee, Decaf &amp; Hot Herbal Teas, and Sodas</p>
 
     </div> <!-- .constrained -->
   </section> <!-- section.schedule#schedule -->
